--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -373,23 +373,71 @@ We didn't found effect of valence on \emph{d} prime, \(F(2, 44) = 0.23\), \(\mat
 \hypertarget{discussion-1}{%
 \subsection{Discussion}\label{discussion-1}}
 
-Experiment 1c was not finished, with limited participants, it may not provide a rigirous test for the effect. (move to supplementary?)
+Experiment 1c was conducted in a old way, i.e., we peeked the data when we collected around 20 participants, and decided to stop because the non-signficant results. (move this experiment to supplementary?)
+
+\hypertarget{experiment-2-sequential-presenting}{%
+\section{Experiment 2: Sequential presenting}\label{experiment-2-sequential-presenting}}
+
+Experiment 2 was conducted for two purpose: (1) to further confirm the facilitation effect of positive moral associations; (2) to test the effect of expectation of occurrence of each pair. In this experiment, after participant learned the assocation between labels and shapes, they were presented a label first and then a shape, they then asked to judge whether the shape matched the label or not (see (Sui, Sun, Peng, \& Humphreys, 2014). Previous studies showed that when the labels presented before the shapes, participants formed expectations about the shape, and therefore a top-down process were introduced into the perceptual matching processing. If the facilitation effect of postive moral valence we found in experiment 1 was mainly drive by top-down processes, this sequential presenting paradigm may eliminate or attenuate this effect; if, however, the facilitation effect ocured because of button-up processes, then, similar facilitation effect will appear even with sequential presenting paradigm.
+
+\hypertarget{method-2}{%
+\subsection{Method}\label{method-2}}
+
+\hypertarget{participants-3}{%
+\subsubsection{Participants}\label{participants-3}}
+
+35 participants (17 female, age = 21.66 \(\pm\) 3.03) were recruited. 24 of them had participated in Experiment 1a (9 male, mean age = 21.9, s.d. = 2.9), and the time gap between these experiment 1a and experiment 2 is at least six weeks. The results of 2 participants were excluded from analysis because of less than 60\% overall accuracy, remains 33 participants (17 female, age = 21.73 \(\pm\) 3.08).
+
+\hypertarget{procedure-3}{%
+\subsubsection{Procedure}\label{procedure-3}}
+
+In Experiment 2, the sequential presenting makes the matching task much easier than experiment 1. To avoid ceiling effect on behavioral data, we did a few pilot experiments to get optimal parameters, i.e., the conditions under which participant have similar accuracy as in Experiment 1 (around 70 \textasciitilde{} 80\% accuracy).
+In the final procedure, the label (good person, bad person, or neutral person) was presented for 50 ms and then masked by a scrambled image for 200 ms. A geometric shape followed the scrambled mask for 50 ms in a noisy background (which was produced by first decomposing a square with ¾ gray area and ¼ white area to small squares with a size of 2 × 2 pixels and then re-combine these small pieces randomly), instead of pure gray background in Experiment 1. After that, a blank screen was presented 1100 ms, during which participants should press a button to indicate the label and the shape match the original association or not. Feedback was given, as in study 1. The next trial then started after 700 \textasciitilde{} 1100 ms blank. Other aspects of study 2 were identical to study 1.
+\#\#\# Analysis
+Data was analyzed as in study 1a.
+
+\hypertarget{results-3}{%
+\subsection{Results}\label{results-3}}
+
+Less than 0.2\% correct trials with less than 200ms reaction times were exlucded.
+
+\hypertarget{analaysis-of-d-prime.-2}{%
+\subsubsection{Analaysis of d prime.}\label{analaysis-of-d-prime.-2}}
+
+There was evidence for the main effect of valence, \(F(2, 64) = 14.03\), \(\mathit{MSE} = 0.21\), \(p < .001\), \(\hat{\eta}^2_G = .077\). Paired t test showed that the Good-Person condition (2.86 \(\pm\) 0.16) was with greater \emph{d} prime than Netural condition (2.28 \(\pm\) 0.15, \emph{t}(32) = 4.46, \emph{p} = 0.002, Cohen's \emph{d} = 0.587). We also found that the Bad-Person condition (2.47 \(\pm\) 0.135) has also greater \emph{d} prime than neutral condition , \emph{t}(32) = 4.15, \emph{p} = 0.007, Cohen's \emph{d} = 0.396). There was no-significant difference between Good and bad conidition, \emph{t}(32) = -1,667, \emph{p} = 0.233, Cohen's \emph{d} = -0.191.
+
+\hypertarget{analaysis-of-reaction-time.-2}{%
+\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.-2}}
+
+The results of reaction times of matchness trials showed similiar pattern as the \emph{d} prime data.
+
+We found intercation between Matchness and Valence (\(F(1.99, 63.68) = 9.44\), \(\mathit{MSE} = 613.77\), \(p < .001\), \(\hat{\eta}^2_G = .018\)) and then analyzed the matched trials and mismatched trials separately, as in experiment 1a.
+
+For matched trials, we found the effect of valence \(F(1.99, 63.71) = 10.00\), \(\mathit{MSE} = 1,223.34\), \(p < .001\), \(\hat{\eta}^2_G = .068\). For non-matched trials, there was no significant effect of Valence (\(F(2, 63.84) = 0.19\), \(\mathit{MSE} = 499.84\), \(p = .829\), \(\hat{\eta}^2_G = .001\)).
+
+Post-hoc \emph{t}-tests revealed that shapes associated with Good Person (550 \(\pm\) 9.45) were responded faster than Neutral-Person (583 \(\pm\) 11.1), (\emph{t}(32) = -3.871, \emph{p} = 0.0018) and Bad Person (584 \(\pm\) 10.2), \emph{t}(32) = -3.838, \emph{p} = 0.0016). While there was no significant differences between Neutral and Bad-Person condition (\emph{t}(32) = -0.122, \emph{p} = 0.9918).
+
+\hypertarget{discussion-2}{%
+\subsection{Discussion}\label{discussion-2}}
+
+In this experiment, we repeated the results pattern that the positive moral valenced stimuli has an advantage over the neutral or the negative valenced association. Moreover, with a croass task analysis, we didn't found evidence that the experiment task interacted with moral valence, suggesting that the effect might not be effect by experiment task.
+These findings suggested that the facilitation effect of positive moral valence is robust and not affected by task. This robust effect detected by the associative learning is unexpected.
 
 \hypertarget{experiment-4a}{%
 \section{Experiment 4a}\label{experiment-4a}}
 
 In study 1-3 participants made explicit judgements about moral associations. In Experiment 4, we examined whether the effects of moral valence occur even when the moral valence information might not be relevent to the task. In this study participants made perceptual match judgements to associations between self-referential labels and shapes (cf.~Sui et al., 2012), but we presented labels of different moral valence levels in the shapes.
 
-\hypertarget{participants-3}{%
-\subsection{Participants}\label{participants-3}}
+\hypertarget{participants-4}{%
+\subsection{Participants}\label{participants-4}}
 
 64 participants (37 female, age = 19.7 \(\pm\) 1.22) participated the current study, 32 of them were from Tsinghua Universtiy in 2015, the rest were from Wenzhou University parpticipated in 2017. All participants were right-handed, and all had normalneutral or corrected-to-normalneutral vision. Informed consent was obtained from all participants prior to the experiment according to procedures approved by a local ethics committee. The data of three participants from Tsinghua site and two participants from Wenzhou site were excluded from analysis because their accuracy was close to chance (\textless{} 0.6). The results for the remaining 59 participants (33 female, age = 19.78 \(\pm\) 1.2) were analyzed and reported.
 
-\hypertarget{results-3}{%
-\subsection{Results}\label{results-3}}
+\hypertarget{results-4}{%
+\subsection{Results}\label{results-4}}
 
-\hypertarget{analaysis-of-d-prime.-2}{%
-\subsubsection{Analaysis of d prime.}\label{analaysis-of-d-prime.-2}}
+\hypertarget{analaysis-of-d-prime.-3}{%
+\subsubsection{Analaysis of d prime.}\label{analaysis-of-d-prime.-3}}
 
 We conducted 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA:
 
@@ -398,7 +446,7 @@ We found the effect of identity (\(F(1, 58) = 121.04\), \(\mathit{MSE} = 0.48\),
 \begin{table}[tbp]
 \begin{center}
 \begin{threeparttable}
-\caption{\label{tab:unnamed-chunk-5}A really beautiful ANOVA table.}
+\caption{\label{tab:unnamed-chunk-4}A really beautiful ANOVA table.}
 \begin{tabular}{lllllll}
 \toprule
 Effect & \multicolumn{1}{c}{$F$} & \multicolumn{1}{c}{$\mathit{df}_1$} & \multicolumn{1}{c}{$\mathit{df}_2$} & \multicolumn{1}{c}{$\mathit{MSE}$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$\hat{\eta}^2_G$}\\
@@ -418,8 +466,8 @@ Identity $\times$ Morality & 4.12 & 2 & 116 & 0.14 & .019 & .004\\
 
 We further examined the effect of valence for both self and other.
 
-\hypertarget{analaysis-of-reaction-time.-2}{%
-\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.-2}}
+\hypertarget{analaysis-of-reaction-time.-3}{%
+\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.-3}}
 
 We conducted 2 (Matchness: match v. mismatch) by 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA:
 
@@ -434,7 +482,7 @@ For non-matched trials, there was no significant effect. Morality (\(F(1, 58) = 
 \begin{table}[tbp]
 \begin{center}
 \begin{threeparttable}
-\caption{\label{tab:unnamed-chunk-7}A really beautiful ANOVA table.}
+\caption{\label{tab:unnamed-chunk-6}A really beautiful ANOVA table.}
 \begin{tabular}{lllllll}
 \toprule
 Effect & \multicolumn{1}{c}{$F$} & \multicolumn{1}{c}{$\mathit{df}_1^{GG}$} & \multicolumn{1}{c}{$\mathit{df}_2^{GG}$} & \multicolumn{1}{c}{$\mathit{MSE}$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$\hat{\eta}^2_G$}\\
@@ -482,14 +530,14 @@ Other - Self 72.2 7.06 58 10.231 \textless{}.0001
 \hypertarget{experiment-4b}{%
 \section{Experiment 4b:}\label{experiment-4b}}
 
-\hypertarget{participants-4}{%
-\subsection{Participants}\label{participants-4}}
+\hypertarget{participants-5}{%
+\subsection{Participants}\label{participants-5}}
 
-\hypertarget{results-4}{%
-\subsection{Results}\label{results-4}}
+\hypertarget{results-5}{%
+\subsection{Results}\label{results-5}}
 
-\hypertarget{analaysis-of-d-prime.-3}{%
-\subsubsection{Analaysis of d prime.}\label{analaysis-of-d-prime.-3}}
+\hypertarget{analaysis-of-d-prime.-4}{%
+\subsubsection{Analaysis of d prime.}\label{analaysis-of-d-prime.-4}}
 
 We conducted 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA:
 
@@ -508,7 +556,7 @@ Morality (\(F(1.59, 69.94) = 2.34\), \(\mathit{MSE} = 0.48\), \(p = .115\), \(\h
 \begin{table}[tbp]
 \begin{center}
 \begin{threeparttable}
-\caption{\label{tab:unnamed-chunk-9}A really beautiful ANOVA table.}
+\caption{\label{tab:unnamed-chunk-8}A really beautiful ANOVA table.}
 \begin{tabular}{lllllll}
 \toprule
 Effect & \multicolumn{1}{c}{$F$} & \multicolumn{1}{c}{$\mathit{df}_1^{GG}$} & \multicolumn{1}{c}{$\mathit{df}_2^{GG}$} & \multicolumn{1}{c}{$\mathit{MSE}$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$\hat{\eta}^2_G$}\\
@@ -539,11 +587,11 @@ We further examined the effect of valence for both self and other.
 \end{Highlighting}
 \end{Shaded}
 
-\hypertarget{results-5}{%
-\section{Results}\label{results-5}}
+\hypertarget{results-6}{%
+\section{Results}\label{results-6}}
 
-\hypertarget{discussion-2}{%
-\section{Discussion}\label{discussion-2}}
+\hypertarget{discussion-3}{%
+\section{Discussion}\label{discussion-3}}
 
 \newpage
 
